traefik/portainer-traefik.yaml
# ingress ingress-nginx.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: portainer
  name: portainer
  namespace: portainer
spec:
  rules:
  - host: portainer2.odoo-shell.dev # Change by your domain
    http:
      paths:
      - backend:
          service:
            name: portainer
            port: 
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - portainer2.odoo-shell.dev
    secretName: portainer-odoo-shell.dev-tls
